src/sass/components/_modal.scss
$modal-overlay-bg-color: $on-primary-color;
$modal-content-bg-color: $surface-color;
$modal-content-font-color: $on-surface-color;
$modal-close-btn-color: $primary-dark-color;
$modal-close-btn-color-hover: $primary-color;

.modal {
    align-items: center;
    background-color: rgba($modal-overlay-bg-color, 0.8);
    bottom: 0;
    // color: #000;
    display: flex;
    justify-content: center;
    left: 0;
    opacity: 0;
    position: fixed;
    right: 0;
    -webkit-tap-highlight-color: transparent;
    top: 0;
    transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
    visibility: hidden;
    z-index: -1;

    &--show {
        opacity: 1;
        visibility: visible;
        z-index: 1300;
    }

    &__container-wrapper {
        align-items: center;
        display: flex;
        height: 90%;
        justify-content: center;
        opacity: 1;
        outline: 0;
        transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
        width: 100%;

        @include media-query(tablet) {
            height: auto;
            max-height: 80%;
        }
    }

    &__container {
        background-color: $modal-content-bg-color;
        border-radius: 4px;
        box-shadow: 0 11px 15px -7px rgba(0, 0, 0, 0.2), 0 24px 38px 3px rgba(0, 0, 0, 0.14),
            0 9px 46px 8px rgba(0, 0, 0, 0.12);
        color: $modal-content-font-color;
        display: flex;
        flex-direction: column;
        height: 100%;
        margin: 20px;
        // max-height: calc(100% - 40px);
        max-width: calc(100% - 40px); //600px;
        position: relative;
        transition: box-shadow 350ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;

        @include media-query(desktop) {
            max-width: 1100px;
        }
    }

    &__header {
        padding: 20px 60px;
        text-align: center;
    }

    &__content {
        border-bottom: 1px solid rgba($modal-close-btn-color, 0.3);
        border-top: 1px solid rgba($modal-close-btn-color, 0.3);
        height: 75%;
        overflow-y: auto;
        padding: 20px;
        width: 100%;

        p {
            margin: 10px auto;
        }

        @include media-query(tablet) {
            height: 80%;
        }

        @include media-query(netbook) {
            padding: 20px 60px;
        }
    }

    &__close-btn {
        border-radius: 50%;
        color: $modal-close-btn-color;
        cursor: pointer;
        flex: 0 0 auto;
        font-size: 2.5rem;
        overflow: visible;
        padding: 12px;
        position: absolute;
        right: 8px;
        text-align: center;
        top: 10px;
        transition: color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;

        &:hover {
            color: $modal-close-btn-color-hover;
        }
    }
}

